--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: build/classes/test/
+          path: ${{ github.workspace }}/build/classes/test/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
