--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,8 @@ jobs:
           distribution: 'temurin'
       - name: Build with Gradle
         run: ./gradlew build
+      - name: LS files (debug)
+        run: ls -a
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
